- Tickets: Fixed html encoding problem for type combobox in the ticket dialog
- Projects: Added contracts functionality for income.
- Comments: added category column in grid
- Tickets: fixed issue when creating invoices from tickets
- Smarter reminder import for events and tasks
- Don't stop importing on large vevent objects
- Export error in tasks when custom fields module is not installed
- private flag synced with caldav
- Icalendar export ordered by start time to avoid recurring event problems.
- Disable copy on calendar invites
- delete exception on all day event not working for caldav
- SaveMailAs: Added the plain email body to the tasks description field.
- Email: Some email attachments would not show in exceptional cases
- Tickets: Fixed store call to billing/costcodes for "administration->rates" costcode combo.
- Customfields: its now possible to create more then 127 categories, field was tinyint(4)

30-03-2015 6.1.28
- Community with just billing license didn't work
- Calendar: Disable the recurrence tab when editing a recurrence "child" event.
- Projects2: Task will use default working week to calculate due date when user is not set
- Tasks: sorting tasks by project works with Projects2 now
- Leavedays: only users with write permission to the leavedays module can delete booked leave days
- Added $config['calendar_disable_merge'] = true; to disable merge of events in calendar view
- Bookmarks: Fixed problem with showing bookmarks without having a grid state set in the database.
- Cron: Fixed namespace problem with GOFS Cronjobs
- Tickets: Changed the ticketNumber to a static value for the email subject. So removed the ticket number prefix from the subject property of the ticket settings.
- Tickets: Added a fix to check if a cc email address is set that is also used as a import mailbox for tickets

18-03-2015 6.1.27
- Fix missing manage permissions for calendar category owners
- Creating a task from email in Thunderbird works